# Qallow

./: .env.example  .gitignore  .gitmodules  .out.hvm  AGI_DEVELOPER_ARCHITECTURE.md  ALG_CCC_README.md  ALG_IMPLEMENTATION_SUMMARY.md  ALG_INDEX.md  ALG_UNIFIED_INTEGRATION.md  AUTOMATED_CLEANUP_GUIDE.md  AUTOMATED_CLEANUP_SETUP_COMPLETE.md  AUTO_COMMIT_TEST.md  BEND_CONVERSION_SUMMARY.md  BEND_INTEGRATION_GUIDE.md  BEND_QUICKSTART.md  BUILD_FIX_SUMMARY.md  BUILD_SUCCESS_REPORT.md  BUILD_SUCCESS_SUMMARY.md  BUTTONS_COMPLETE_SOLUTION.md  BUTTONS_CONNECTED_FINAL_REPORT.md  BUTTONS_FIXED_COMPLETE_REPORT.md  BUTTONS_FUNCTIONALITY_GUIDE.md  BUTTONS_NOW_FULLY_FUNCTIONAL.md  BUTTONS_NOW_WORKING.md  BUTTONS_VERIFIED_WORKING.md  BUTTONS_WORKING_NOW.md  BUTTON_CONNECTION_VERIFICATION.md  BUTTON_FIX_COMPLETE.md  BUTTON_FIX_FINAL.md  BUTTON_FIX_REPORT.md  BUTTON_INTEGRATION_COMPLETE.md  BUTTON_OPERATIONS_REFERENCE.md  BUTTON_QUICK_REFERENCE.md  CARGO_RUN_FIX.md  CIRQ_FRAMEWORK_SUMMARY.md  CIRQ_vs_QISKIT_BENCHMARK_REPORT.md  CI_BUILD_FIX_SUMMARY.md  CLEANUP_COMPLETION_SUMMARY.md  CMakeLists.txt  COMMAND_CLEANUP_SUMMARY.md  (+212 more)
.continue/: QUICK_START.md  README.md  SETUP_CHECKLIST.md  TROUBLESHOOTING.md
.github/: copilot-instructions.md
alg/: ARCHITECTURE.md  CMakeLists.txt  README.md  alg.sh.in  main.py  qaoa_spsa.py  setup.py  test_alg.py
alg/core/: __init__.py  build.py  run.py  test.py  verify.py
alg_ccc/: CMakeLists.txt  hamiltonian.cu  koopman_cuda.cu  qaoa_constraint.py
alg_ccc/include/: ccc.hpp
alg_ccc/tests/: test_gray.cpp  test_kernels.cu
algorithms/: Makefile  ethics_bayes.c  ethics_core.c  ethics_feed.c  ethics_learn.c  ethics_test  ethics_test.c  ethics_test_feed  ethics_test_feed.c  quantum_suite.c
algos/: qaoa_hparam.py
app/: INSTALLATION.md  QUICKSTART.md  README.md  main.js  preload.js
bend/: ethics.bend  hello.bend  main.bend  phase12.bend  phase12_simple.bend  phase12_v2.bend  phase12_working.bend  phase13.bend  qallow.bend  test_add.bend  test_minimal.bend  util.bend
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  qallow  qallow_ui
build_old/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  phase01_demo  phase02_demo  phase03_demo  phase04_demo  phase05_demo  phase06_demo  phase07_demo  phase08_demo  phase09_demo  phase10_demo  phase11_demo  phase12_demo  phase13_demo  qallow_unit_cuda_parallel  qallow_unit_dl_integration  qallow_unit_ethics
build_qallow/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qallow
c_ext/: qaoa_eval.c
config/: agent.yaml  thresholds.json  weights.json
configs/: hparam_space.yaml
core/: main.c  phase16_meta_introspect.cuh
deploy/: Dockerfile
development/: livelang_cuda  livelang_cuda.cu  output  output.c
docs/: ARCHITECTURAL_SCALING_ROADMAP.md  ARCHITECTURE_SPEC.md  Bend_Conversion_Workflow.md  DEPENDENCY_MANAGEMENT.md  ETHICS_CHARTER.md  IBM_QUANTUM_PLATFORM_SETUP.md  KUBERNETES_DEPLOYMENT_GUIDE.md  PERSISTENT_NOTES.md  PHASE13_CLOSED_LOOP.md  PHASE16_STABILIZATION.md  QUANTUM_WORKLOAD_GUIDE.md  QUICKSTART.md  Qallow_Bend_Spec.md  Qallow_capabilities_and_glossary.md  SCALING_IMPLEMENTATION_SUMMARY.md  ibm_quantum_workload_setup.md  internal_readiness_v0_1.md  unified_agi_pipeline.md
ethics/: ethics_model.h
examples/: Makefile  README.md  grover_50q_search.py  ibm_quantum_bell.py  qallow_ethics_integration  qallow_ethics_integration.c  qgan_torch_gaussian.py  qiskit_bell_state.py  qiskit_ibm_runtime.py  qsvc_synthetic_demo.py  quantum_adaptive_demo.py  quantum_bandit_policy.py  quantum_bandit_runtime.py  quantum_echoes_demo.py  quantum_meta_learning.py  vqc_binary_classifier.py
include/: meta_introspect.h  qallow_kernels.h
interface/: bend_bridge.c  launcher.c  main.c  qallow_ui.c
io/: sensors.json
k8s/: qallow-deploy.yaml  qallow-logs-pvc.yaml  qallow-namespace.yaml  qallow-phase12-deployment.yaml  qallow-phase13-deployment.yaml
monitoring/: grafana-deploy.yaml  prometheus-config.yaml  prometheus-deploy.yaml
native_app/: BUILD_GUIDE.md  BUTTON_TEST_GUIDE.md  Cargo.toml  QUICKSTART.md  README.md
native_app/src/: button_handlers.rs  codebase_manager.rs  config.rs  error_recovery.rs  logging.rs  main.rs  models.rs  shortcuts.rs  shutdown.rs  utils.rs
native_app/src/backend/: api_client.rs  metrics_collector.rs  mod.rs  process_manager.rs
native_app/src/ui/: audit_log.rs  control_panel.rs  dashboard.rs  help.rs  metrics.rs  mod.rs  settings.rs  terminal.rs
native_app/tests/: button_integration_test.rs
nsight_compute/: TreeLauncherSubreaper  TreeLauncherTargetLdPreloadHelper
ops/: auto-halt-webhook.sh  deploy_all.sh  port_forward.sh  test_smoke.sh
proto/: qallow_common.proto  qallow_phase12.proto  qallow_phase13.proto
python/: collect_signals.py  quantum_core.py  quantum_cuda_bridge.py  quantum_ibm_workload.py  quantum_learning_system.py  requirements-dev.txt  train_and_feed.py
qallow_quantum_rust/: Cargo.toml  DELIVERY_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUANTUM_OPTIMIZER_GUIDE.md  QUANTUM_OPTIMIZER_QUICKREF.md  README.md
qallow_quantum_rust/src/: lib.rs  main.rs  quantum_optimizer.rs
qallow_vm/: README.md  build_unified.bat
quantum_algorithms/: QUANTUM_ALGORITHM_SUITE.py  README.md  setup.sh  unified_quantum_framework.py  unified_quantum_framework_qiskit.py  unified_quantum_framework_real_hardware.py
runtime/: cuda_parallel.cu  cuda_parallel.h  dl_integration.cpp  dl_integration.h  meta_introspect.c  meta_introspect.h
rust/app/: Cargo.toml
rust/app/src/: fltk_gui.rs  gui.rs  main.rs
rust/ui/: Cargo.toml
rust/ui/src/: lib.rs
scripts/: Makefile  baseline_benchmark.sh  benchmark.ps1  build.bat  build.ps1  build_all.sh  build_clean.sh  build_unified.bat  build_unified_cuda.sh  build_unified_ethics.sh  build_wrapper.bat  build_wrapper.sh  check_dependencies.sh  check_makefile_sources.py  collect_signals.sh  demo_continuous.sh  hparam_eval.py  ibm_quantum_workload.py  pre_build_cleanup.sh  qiskit_bridge.py  qsvm_iris_workload.py  register_phase16.sh  reload_context.sh  (+10 more)
(+349 files in other folders)
