[workspace]
members = [
    "rust/app",
    "rust/ui",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3"
egui = "0.27"
eframe = { version = "0.27", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
