[workspace]
members = [
    "rust/app",
    "rust/ui",
]
default-members = ["rust/app"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3"
fltk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
