[package]
name = "qallow-native"
version = "1.0.0"
edition = "2021"
authors = ["Qallow Team"]
description = "Native desktop application for Qallow Quantum-Photonic AGI System"
license = "MIT"

[dependencies]
fltk = { version = "1.4", features = ["enable-glwindow"] }
fltk-theme = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
regex = "1"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "qallow-native"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

