[package]
name = "qallow_quantum_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qallow_quantum"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
nalgebra = "0.33"
ndarray-rand = "0.15"
rand = "0.8"
rand_chacha = "0.3"
num-complex = "0.4"
approx = "0.5"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
