[package]
name = "qallow_ui"
version = "0.1.0"
edition = "2021"
description = "Telemetry utilities shared by Qallow Rust frontends"
license = "MIT"

[dependencies]
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
